Applet works, but then hangs for some reason :/

--- a/README
+++ b/README
@@ -1,3 +1,13 @@
 The current deskbar (http://raphael.slinckx.net/deskbar/) applet for Firefox
 only support Firefox 1.x, 2.x. In Firefox 3, a new sqlite-based database is
 being used.
+
+The deskbar plugin only works with versions 2.20 and higher.
+
+Place (or, if you're developing - symlink) ff3.py AND deskbar_ff3.py in
+~/.gnome2/deskbar-applet/modules-2.20-compatible/. Make sure to hit the
+"Reload" button within Deskbar preferences for the plugin to show up.
+
+For global installation:
+  * Put deskbar_ff3.py in /usr/lib/deskbar-applet/modules-2.20-compatible/
+  * Put ff3.py somewhere reachable ;)
